# spytial

./: .gitignore  404.html  =23.0.0  =7.0.0  CLEANUP_SUMMARY.md  DOMAIN_RELATIONALIZERS.md  EXPORT_FIX_SUMMARY.md  JUPYTER_COMM_SYSTEM.md  LICENSE  MANIFEST.in  NARY_RELATIONS.md  OBJECT_ANNOTATIONS.md  PUBLISHING.md  README.md  REGISTRY_FIX.md  WIDGET_FIX_SUMMARY.md  WIDGET_MESSAGING_ISSUE.md  WIDGET_TESTING.md  WORKING_FEATURES.md  agents.md  cnd_evaluator.html  cnd_visualization.html  dataclass_builder.html  demo.ipynb  demo_at_operator.py  demo_nary_relations.py  demo_object_annotations.py  demo_reify.py  index.html  mkdocs.yml  objects.inv  plannedFeatures.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml  spytial_sequence_visualization.html  test_cnd_minimal.html  test_perf_download.py  test_visualization_integration.py  (+3 more)
.github/: copilot-instructions.md
DATACLASS_BUILDER/: index.html
DEVELOPMENT/: index.html
PERFORMANCE_METRICS/: index.html
PUBLISHING/: index.html
assets/: hero-tree.html  playground.html
cndviz/: __init__.py  annotations.py  serializer.py  visualizer.html  visualizer.py  visualizer_template.html
demos/: 00-demo-showcase.ipynb  01-simple-data-structures.ipynb  02-custom-providers-z3.ipynb  02-object-annotations.ipynb  02-z3-case-study.ipynb  03-bdd-written.ipynb  03-object-annotations.ipynb  03-reify-functionality.ipynb  03-z3-case-study.ipynb  04-bdds.ipynb  04-dataclass-builder.ipynb  04-pandas-integration.ipynb  04-structured-input.ipynb  05-dds.ipynb  05-enhanced-data-structures.ipynb  05-heapq.ipynb  06-dataclass-cnd-builder.ipynb  06-dataclass-input-builder.ipynb  06-provider-development.ipynb  06-sparse-matrices.ipynb  06-structured-input.ipynb  README.md  balancing.ipynb  bdd.dot  clrs-relationalization-visualization.ipynb  dataclass-builder-widget.ipynb  dataclass_builder_demo.py  demo.ipynb  docker-compose-viz.ipynb  example_type_aliases_auto_method.py  heaps.ipynb  input_builder_employee.html  input_builder_person.html  input_builder_treenode.html  memoization.ipynb  protobuf-spytial.ipynb  resolvelib-spytial.ipynb  sparse_layout.py  test-auto-method-detection.ipynb  test-widget-interaction.ipynb  (+4 more)
docs/: DATACLASS_BUILDER.md  DEVELOPMENT.md  PERFORMANCE_METRICS.md  PUBLISHING.md  WIDGET_STATE.md  annotations.md  getting-started.md  how-it-works.md  index.md  operations.md  playground.md  pythonspecific.md  relationalizers.md  selectors.md  suggest.md
getting-started/: index.html
how-it-works/: index.html
javascripts/: playground-newtab.js
operations/: index.html
playground/: index.html
pythonspecific/: index.html
relationalizers/: index.html
scripts/: pre_publish_check.py  quick_publish_check.py  refresh_dependencies.py  render_check.py  vendor_core.py
search/: search_index.json
selectors/: index.html
spytial/: __init__.py  _edit_server.py  _version.py  annotations.py  core_assets.py  dataclass_builder.py  dataclass_widget.py  dataclass_widget_cnd.py  dataclassbuilder.py  evaluator.py  evaluator_template.html  input_template.html  input_template_cdn.html  provider_system.py  query_preprocessor.py  requirements.txt  sequence_visualizer_template.html  structured_evaluator.py  structured_evaluator_template.html  structured_input.py  utils.py  visualizer.py  visualizer_template.html
stylesheets/: extra.css
suggest/: index.html
test/: test_annotation_registry_isolation.py  test_at_operator_integration.py  test_core_embedding_assets.py  test_data_instance_format.py  test_dataclass_widget.py  test_datamodel_inspection.py  test_decorator_deduplication.py  test_decorator_docs.py  test_deduplication.py  test_domain_relationalizers.py  test_edit_browser.py  test_edit_server.py  test_group_selector.py  test_input_general.py  test_multiple_atoms.py  test_nary_relations.py  test_object_annotations.py  test_provider_system.py  test_query_preprocessor.py  test_reify.py  test_reify_pbt.py  test_relationalizers.py  test_sequence_visualizer.py  test_structured_input.py  test_style_directives.py  test_suggest.py  test_suggest_ask.py  test_suggest_eval.py  test_suggest_examples.py  (+6 more)
(+83 files in other folders)
