[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spytial_diagramming"
version = "0.6.4"
description = "sPyTial: Spatial Python visualization with declarative constraints"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Siddhartha Prasad"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "ipython>=8.0.0",
]
keywords = ["visualization", "diagrams", "spatial", "constraints", "data-structures"]

[project.urls]
Homepage = "https://github.com/sidprasad/spytial"
Repository = "https://github.com/sidprasad/spytial"
Issues = "https://github.com/sidprasad/spytial/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["spytial*"]

[tool.setuptools.package-data]
spytial = ["*.html"]
