[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spytial_diagramming"
dynamic = ["version"]
description = "sPyTial: Spatial Python visualization with declarative constraints"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Siddhartha Prasad"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "ipython>=8.0.0",
]
keywords = ["visualization", "diagrams", "spatial", "constraints", "data-structures"]

[project.urls]
Homepage = "https://github.com/sidprasad/spytial"
Documentation = "https://sidprasad.github.io/spytial/"
Repository = "https://github.com/sidprasad/spytial"
Issues = "https://github.com/sidprasad/spytial/issues"

[project.optional-dependencies]
headless = [
    "selenium>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]
e2e = [
    "playwright>=1.40",
]
# Optional LLM enrichment layer for spytial.suggest (spatial-shape suggestions:
# orientation / cyclic / group over structural fields). The static analyzer needs
# none of this — it is stdlib-only and the default path.
# We depend on `llm` (Simon Willison's) rather than a single provider SDK: it is
# provider-agnostic (Claude, GPT, Gemini, local Ollama via plugins) and owns key
# management, so spytial stays unopinionated. Install a provider plugin separately,
# e.g. `llm install llm-anthropic`. (`llm` itself requires Python >=3.10.)
suggest-llm = [
    "llm>=0.23",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["spytial*"]

[tool.setuptools.dynamic]
version = {attr = "spytial._version.__version__"}

[tool.setuptools.package-data]
spytial = ["*.html"]
